@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - the "iri-reference" format is now supported, sort of (all strings
+            will be accepted as valid)
 
 0.554     2022-07-24 00:08:54Z
           - use new Slurpy type in Types::Standard
